@@ -14,8 +14,7 @@
 //   a little. Use the following code snippet to display the current
 //   Gallery version linked to the Gallery home page.
 //
-?>
-<?php
+
 includeTemplate('stats.footer.tpl');
 ?>
 	<table width="100%" cellspacing="0" cellpadding="0" class="modfooter">
@@ -35,14 +34,13 @@ includeTemplate('stats.footer.tpl');
 		<!-- donation block -->
 		<td width="300" align="right">
 		<span class="fineprint">
-		Are you happy with Gallery ?
+		Are you happy with Gallery?
 		Make us happy too!  Donate!<br>
-		(only admins see this message and button)<br>
 		</span>
 		</td>
 		<td width="90" align="right">
 		<a href="<?php echo $gallery->url ?>/donate.php?donate_tag=v<?php echo $gallery->version ?>">
-			<img align="right" src="<?php echo getImagePath('donate.jpg') ?>" width="88" height="31" border="0" ALT="<?php echo _("Donate to Gallery now!!") ?>">
+			<img align="right" src="<?php echo getImagePath('donate.png') ?>" width="80" height="15" border="0" ALT="<?php echo _("Donate to Gallery now!!") ?>">
 		</a>
 		</td>
 		<?php } ?>
