@@ -124,18 +124,27 @@ function Gallery() {
 
 function poweredBy () {
     global $gallery;
-    $link = '<a href="'.$gallery->url.'" target="_blank">'.Gallery().'</a>';
+
+	$addon = "\n<!-- {$gallery->version} -->";
+
     if (isDebugging() || $gallery->app->devMode == "yes" || $gallery->user->isAdmin()) {
         $version = $gallery->version;
-    } else {
-        $version = "1<!-- {$gallery->version} -->";
+	}
+	else {
+		$version = "1";
     }
 
     if ($gallery->session->offline) {
-        return sprintf(gTranslate('common', "Generated by %s v%s"), $link, $version);
-    } else {
-        return sprintf(gTranslate('common', "Powered by %s v%s"), $link, $version);
+		$altText = sprintf(gTranslate('common', "Generated by %s v%s"), Gallery(), $version);
     }
+	else {
+		$altText = sprintf(gTranslate('common', "Powered by %s v%s"), Gallery(), $version);
+	}
+
+	$link = '<a href="'.$gallery->url.'" target="_blank">'. gImage('gallery1.gif', $altText) .'</a>';
+
+	return $link . $addon;
+
 }
 
 function debugMessage($msg, $file, $line, $level = NULL) {
