@@ -1,3 +1,10 @@
+2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b36
+
+ * Change: Nice new donate icon.
+
+ * Change: Nice new Gallery 1.5.8 icon :-)))
+           The 1st G1 icon.
+
 2008-08-06 Jens Tkotz <jens@peino.de> 1.5.8-svn-b35
 
  * CHANGE: Added new colorpicker.
